--- a/proyecto_web/plantillas/lagos.html
+++ b/proyecto_web/plantillas/lagos.html
@@ -57,7 +57,7 @@
         <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link index px-3" href="#">Inicio</a>
+              <a class="nav-link index px-3" href="../index.htm">Inicio</a>
             </li>
             <li class="nav-item dropdown">
               <select class="select-menu mx-3 my-1" onchange="location = this.value;">
@@ -66,7 +66,7 @@
                 <option value="../plantillas/rural.html">Rural</option>
                 <option value="../plantillas/playas.html">Playas</option>
                 <option value="../plantillas/lagos.html">Lagos</option>
-                <option value="../plantillas/montannas.html">Montañas</option>
+                <option value="../plantillas/montanas.html">Montañas</option>
               </select>
             </li>
             <li class="nav-item">
