--- a/proyecto_web/index.htm
+++ b/proyecto_web/index.htm
@@ -16,36 +16,39 @@
 <body>
   <!-- Header -->
   <header>
+  
     <div class="container-fluid bg-light py-2 border-bottom">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-4">
             <div class="d-flex align-items-center">
-              <a href="./index.htm" >
+              <a href="./index.htm">
                 <img src="./logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-header">
               </a>
-              <!-- Icono de llamada eliminado xd -->
             </div>
           </div>
-
+  
           <div class="col-md-4 text-center">
             <div class="d-flex align-items-center justify-content-center">
               <i class="bx bx-globe fs-2 text-primary me-2"></i>
-              <h1 class="m-0 fs-3 fw-bold"><a href="./index.htm" class="text-decoration-none">Turismo SV</a></h1>
+              <h1 class="m-0 fs-3 fw-bold">
+                <a href="./index.htm" class="text-decoration-none">Turismo SV</a>
+              </h1>
             </div>
           </div>
-
+  
         </div>
       </div>
     </div>
-
+  
+  
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-custom shadow-sm">
       <div class="container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
           <span class="navbar-toggler-icon"></span>
         </button>
-
+  
         <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
@@ -79,7 +82,25 @@
             <li class="nav-item">
               <a class="nav-link px-3" href="./plantillas/login.html">Iniciar Sesion</a>
             </li>
-          </ul>        
+  
+            <li class="nav-item dropdown">
+              <a href="#" id="userDropdownBtn" class="nav-link d-flex align-items-center" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                <img id="navbarProfilePic" src="./pictureDefault/perfilLogoDefecto.jpg" alt="Perfil"
+                  class="rounded-circle">
+              </a>
+              <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="userDropdownBtn">
+                <li>
+                  <h6 class="dropdown-header" id="userEmail">usuario@example.com</h6>
+                </li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="./plantillas/usuario.html">Mi cuenta</a></li>
+                <li><a class="dropdown-item" href="#" onclick="cerrarSesion()">Cerrar sesión</a></li>
+              </ul>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
@@ -101,7 +122,9 @@
   <main class="container my-5">
     <!-- Features -->
     <section class="row g-4 mb-5">
-      <center><h2 class="fw-bold">Nuestros Servicios</h2></center>
+      <center>
+        <h2 class="fw-bold">Nuestros Servicios</h2>
+      </center>
       <div class="col-md-3">
         <div class="card h-100 shadow-sm card-feature text-center p-3">
           <i class="bx bx-bus mb-3"></i>
@@ -111,7 +134,7 @@
           </div>
         </div>
       </div>
-
+  
       <div class="col-md-3">
         <div class="card h-100 shadow-sm card-feature text-center p-3">
           <i class="bx bx-map mb-3"></i>
@@ -121,7 +144,7 @@
           </div>
         </div>
       </div>
-
+  
       <div class="col-md-3">
         <div class="card h-100 shadow-sm card-feature text-center p-3">
           <i class="bx bx-water mb-3"></i>
@@ -131,7 +154,7 @@
           </div>
         </div>
       </div>
-
+  
       <div class="col-md-3">
         <div class="card h-100 shadow-sm card-feature text-center p-3">
           <i class="bx bx-leaf mb-3"></i>
@@ -142,7 +165,7 @@
         </div>
       </div>
     </section>
-
+  
     <section class="mb-5">
       <h2 class="text-center mb-4 fw-bold">Tipos de Turismo</h2>
       <div class="row g-4">
@@ -160,12 +183,12 @@
               <a href="./plantillas/urbano.html" style="text-decoration: none;">
                 <p class="card-text text-success">Ver mas</p>
               </a>
-
+  
             </div>
           </div>
         </div>
-    
-
+  
+  
         <div class="col-md-4">
           <div class="card h-100 shadow-sm card-product">
             <div class="position-relative">
@@ -183,7 +206,7 @@
             </div>
           </div>
         </div>
-
+  
         <div class="col-md-4">
           <div class="card h-100 shadow-sm card-product">
             <div class="position-relative">
@@ -198,10 +221,10 @@
               <a href="./plantillas/lagos.html" style="text-decoration: none;">
                 <p class="card-text text-success">Ver mas</p>
               </a>
-              </div>
+            </div>
           </div>
         </div>
-
+  
         <!-- Última fila centrada -->
         <div class="d-flex justify-content-center gap-4">
           <div class="col-md-4">
@@ -221,7 +244,7 @@
               </div>
             </div>
           </div>
-        
+  
           <div class="col-md-4">
             <div class="card h-100 shadow-sm card-product">
               <div class="position-relative">
@@ -241,66 +264,66 @@
           </div>
         </div>
     </section>
-
-        <!-- Gallery -->
+  
+    <!-- Gallery -->
     <!-- Carrusel de Turismo -->
-  <section class="mb-5 container">
-    <div id="carruselTurismo" class="carousel slide carousel-fade" data-bs-ride="carousel">
-
-      <!-- Indicadores -->
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carruselTurismo" data-bs-slide-to="0" class="active" aria-current="true"
-          aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carruselTurismo" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carruselTurismo" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#carruselTurismo" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    <section class="mb-5 container">
+      <div id="carruselTurismo" class="carousel slide carousel-fade" data-bs-ride="carousel">
+  
+        <!-- Indicadores -->
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carruselTurismo" data-bs-slide-to="0" class="active" aria-current="true"
+            aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carruselTurismo" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carruselTurismo" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carruselTurismo" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        </div>
+  
+        <!-- Slides -->
+        <div class="carousel-inner rounded shadow">
+          <div class="carousel-item active">
+            <img src="./images/volcanes.jpg" class="d-block w-100 carrusel-img" alt="Volcán">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Volcanes de El Salvador</h5>
+              <p>Imponentes vistas naturales.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./images/playas.jpg" class="d-block w-100 carrusel-img" alt="Playa">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Playas paradisíacas</h5>
+              <p>Disfruta del sol y el mar.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./images/lagos.jpg" class="d-block w-100 carrusel-img" alt="Lago">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Lagos cristalinos</h5>
+              <p>Relájate en la naturaleza.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./images/centroHistorico.jpeg" class="d-block w-100 carrusel-img" alt="Centro Histórico">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Centro Histórico</h5>
+              <p>Cultura, historia y arquitectura.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Controles -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#carruselTurismo" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carruselTurismo" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Siguiente</span>
+        </button>
       </div>
-
-      <!-- Slides -->
-      <div class="carousel-inner rounded shadow">
-        <div class="carousel-item active">
-          <img src="./images/volcanes.jpg" class="d-block w-100 carrusel-img" alt="Volcán">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Volcanes de El Salvador</h5>
-            <p>Imponentes vistas naturales.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="./images/playas.jpg" class="d-block w-100 carrusel-img" alt="Playa">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Playas paradisíacas</h5>
-            <p>Disfruta del sol y el mar.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="./images/lagos.jpg" class="d-block w-100 carrusel-img" alt="Lago">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Lagos cristalinos</h5>
-            <p>Relájate en la naturaleza.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="./images/centroHistorico.jpeg" class="d-block w-100 carrusel-img" alt="Centro Histórico">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Centro Histórico</h5>
-            <p>Cultura, historia y arquitectura.</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Controles -->
-      <button class="carousel-control-prev" type="button" data-bs-target="#carruselTurismo" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Anterior</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carruselTurismo" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Siguiente</span>
-      </button>
-    </div>
-  </section>
-
-
+    </section>
+  
+  
     <!-- Blogs -->
     <section>
       <h2 class="text-center mb-4 fw-bold">Últimos Blogs</h2>
@@ -319,7 +342,7 @@
             </div>
           </div>
         </div>
-
+  
         <div class="col-md-6">
           <div class="card h-100 shadow-sm card-blog">
             <img src="./images/suchi.jpg" class="card-img-top" alt="Blog Suchitoto">
@@ -388,6 +411,9 @@
     <!-- Bootstrap JS -->
     <script src="./js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/usuario.js"></script>
+    <script src="./js/login.js"></script>
+    <script src="./js/navbarUsuario.js"></script>
 
 </body>
 </html>
