--- a/proyecto_web/plantillas/usuario.html
+++ b/proyecto_web/plantillas/usuario.html
@@ -106,7 +106,7 @@
                                     <hr class="dropdown-divider">
                                 </li>
                                 <li><a class="dropdown-item" href="../plantillas/usuario.html">Mi cuenta</a></li>
-                                <li><a class="dropdown-item" href="#" onclick="cerrarSesion()">Cerrar sesión</a></li>
+                                <li><a class="dropdown-item" href="../index.htm" onclick="cerrarSesion()">Cerrar sesión</a></li>
                             </ul>
                         </li>
                     </ul>
