--- a/proyecto_web/plantillas/reservas.html
+++ b/proyecto_web/plantillas/reservas.html
@@ -12,7 +12,6 @@
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <link href="../css/style.css" rel="stylesheet" />
   <link href="../css/styleReserva.css" rel="stylesheet" />
-
 </head>
 
 <body>
@@ -27,41 +26,42 @@
               <a href="../index.htm">
                 <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-header">
               </a>
-              <!-- Icono de llamada eliminado xd -->
             </div>
           </div>
-
+  
           <div class="col-md-4 text-center">
             <div class="d-flex align-items-center justify-content-center">
               <i class="bx bx-globe fs-2 text-primary me-2"></i>
-              <h1 class="m-0 fs-3 fw-bold"><a href="../index.html" class="text-decoration-none">Turismo SV</a></h1>
+              <h1 class="m-0 fs-3 fw-bold">
+                <a href="../index.htm" class="text-decoration-none">Turismo SV</a>
+              </h1>
             </div>
           </div>
-
         </div>
       </div>
     </div>
-
+  
+  
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-custom shadow-sm">
       <div class="container">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          title="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
           <span class="navbar-toggler-icon"></span>
         </button>
-
+  
         <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link indexNav px-3" href="../index.htm">Inicio</a>
+              <a class="nav-link px-3" href="../index.htm">Inicio</a>
             </li>
             <li class="nav-item dropdown">
-              <select class="select-menu mx-3 my-1" title="TiposTurismo">
+              <select class="select-menu mx-3 my-1" onchange="location = this.value;">
                 <option value="">TURISMO</option>
-                <option value="urbano">Urbano</option>
-                <option value="playas">Playas</option>
-                <option value="lagos">Lagos</option>
-                <option value="montanas">Montañas</option>
+                <option value="../plantillas/urbano.html"></a>Urbano</option>
+                <option value="../plantillas/rural.html">Rural</option>
+                <option value="../plantillas/playas.html">Playas</option>
+                <option value="../plantillas/lagos.html">Lagos</option>
+                <option value="../plantillas/montanas.html">Montañas</option>
               </select>
             </li>
             <li class="nav-item">
@@ -77,19 +77,46 @@
               <a class="nav-link px-3" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link promociones!!! aca deben colocar el nombre de la clase para mantener el color activo px-3"
-                href="../plantillas/promociones.html">Promociones</a>
+              <a class="nav-link px-3" href="../plantillas/promociones.html">Promociones</a>
             </li>
             <li class="nav-item">
               <a class="nav-link px-3" href="../plantillas/login.html">Iniciar Sesion</a>
             </li>
+  
+            <li class="nav-item dropdown">
+              <a href="#" id="userDropdownBtn" class="nav-link d-flex align-items-center" data-bs-toggle="dropdown"
+                aria-expanded="false">
+               <img id="navbarProfilePic" src="../pictureDefault/perfilLogoDefecto.jpg" alt="Perfil"
+                  class="rounded-circle">
+              </a>
+              <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="userDropdownBtn">
+                <li>
+                  <h6 class="dropdown-header" id="userEmail">usuario@example.com</h6>
+                </li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="../plantillas/usuario.html">Mi cuenta</a></li>
+                <li><a class="dropdown-item" href="../index.htm" onclick="cerrarSesion()">Cerrar sesión</a></li>
+              </ul>
+            </li>
           </ul>
-
         </div>
       </div>
     </nav>
   </header>
 
+      <!-- Banner -->
+    <section class="banner d-flex align-items-center">
+      <div class="banner-overlay"></div>
+      <div class="container text-white text-center banner-content">
+        <p class="fs-4 mb-1">Explora El Salvador</p>
+        <h2 class="display-4 fw-bold mb-4">
+          Reservando tu<br />próxima escapada
+        </h2>
+      </div>
+    </section>
+    
   <!-- Main Content -->
   <!-- Inicio de elementos de reservas -->
   <main class="container my-5">
@@ -467,11 +494,12 @@
         </div>
 
         <!-- Sobre Nosotros -->
-        <div class="col-md-4 mb-4">
-          <h5 class="fw-bold text-uppercase">Sobre Nosotros</h5>
-          <p class="text-white-50 mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-          <p class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-        </div>
+          <div class="col-md-4 mb-4">
+            <h5 class="fw-bold text-uppercase">Sobre Nosotros</h5>
+            <p class="text-white-50 mb-1" style="text-align: justify;">Somos una empresa salvadoreña especializada en la reserva de excursiones
+        turísticas hacia los destinos más fascinantes de nuestro país. </p>
+            <p class="text-white-50" style="text-align: justify;">Ofrecemos experiencias únicas en zonas urbanas, rurales, lagos, playas y montañas, conectando a los viajeros con la riqueza natural, cultural y humana de El Salvador.</p>
+          </div>
 
         <!-- Redes Sociales -->
         <div class="col-md-5 mb-4">
@@ -501,6 +529,8 @@
       </div>
     </div>
   </footer>
+
+
   <!-- Modal para mostrar resultados -->
   <div class="modal fade" id="reservaModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog">
@@ -524,6 +554,9 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../js/reserva.js"></script>
-</body>
+  <script src="../js/script.js"></script>
+  <script src="../js/navbarUsuario.js"></script>
+  <script src="../js/usuario.js"></script>
 
+</body>
 </html>
